--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="container" role="container">
     <div class="card">
       <div class="card__img"><img src="images/image-qr-code.png" alt="Main img" class="image"></div>
       <h3 class="subtitle">Improve your front end Skills by building new projects</h3>
