--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -16,17 +16,23 @@
   </style>
 </head>
 <body>
-  <div class="container" role="container">
+  <section>
+    <div class="container" >
     <div class="card">
       <div class="card__img"><img src="images/image-qr-code.png" alt="Main img" class="image"></div>
       <h3 class="subtitle">Improve your front end Skills by building new projects</h3>
       <p class="para">Scan the qr code to visit frontendmentor and take your coding skills to the next level</p>
     </div>
   </div>
+  </section>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Yehan Nilanga</a>.
-  </div>
+
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Yehan Nilanga</a>.
+    </div>
+  </footer>
+
 </body>
 </html>
