--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <section>
+  <main role="main">
     <div class="container" >
     <div class="card">
       <div class="card__img"><img src="images/image-qr-code.png" alt="Main img" class="image"></div>
@@ -24,7 +24,7 @@
       <p class="para">Scan the qr code to visit frontendmentor and take your coding skills to the next level</p>
     </div>
   </div>
-  </section>
+</main>
 
 
   <footer>
