--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <main role="main">
+  <main>
     <div class="container" >
     <div class="card">
       <div class="card__img"><img src="images/image-qr-code.png" alt="Main img" class="image"></div>
