--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -16,33 +16,36 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="card">
-      <div class="card__img"></div>
-      <div class="card__body">
-         <h3 class="card__title">Order Summary</h3>
-         <p class="card__para">  You can now listen to millions of songs, audiobooks, and podcasts on any 
-          device anywhere you like!
-        </p>
-         <div class="plan">
-            <img src="images/icon-music.svg" class="icon__img" alt="">
-            <div>
-              <h5>Annual Plan</h5>
-              <h6>$59.99/year</h6>
-            </div>
-            <a href="#" class="plan__link">Change</a>
-         </div> 
-         <a href="#" class="btn btn__main"> Proceed to Payment</a>
-         <a href="#" class="btn btn__cancel">Cancel Order</a>
-
+  <main>
+    <div class="container">
+      <div class="card">
+        <div class="card__img"></div>
+        <div class="card__body">
+           <h3 class="card__title">Order Summary</h3>
+           <p class="card__para">  You can now listen to millions of songs, audiobooks, and podcasts on any 
+            device anywhere you like!
+          </p>
+           <div class="plan">
+              <img src="images/icon-music.svg" class="icon__img" alt="">
+              <div>
+                <p>Annual Plan</p>
+                <p>$59.99/year</p>
+              </div>
+              <a href="#" class="plan__link">Change</a>
+           </div> 
+           <a href="#" class="btn btn__main"> Proceed to Payment</a>
+           <a href="#" class="btn btn__cancel">Cancel Order</a>
+  
+        </div>
       </div>
     </div>
-  </div>
+  </main>
+
   
   <footer>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/Yehan20/Front-End-Mentor-Solutions">Yehan Nilanga</a>.
+      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a></p>
+      <p>Coded by <a href="https://github.com/Yehan20/Front-End-Mentor-Solutions">Yehan Nilanga</a></p>
     </div>
   </footer>
 </body>
