--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -22,7 +22,7 @@
           </div>
           <div class="hamburger__menu">
              <button class="toggle__btn">
-              <img src="images/icon-hamburger.svg" class="">
+              <img src="images/icon-hamburger.svg" class="image__icon">
              </button>
           </div>
           <ul class="list">
@@ -52,6 +52,6 @@
         </div>
     </div>
   </header>
-
+  <script src="js/app.js"></script>
 </body>
 </html>
