--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -11,10 +11,9 @@
   <title>Frontend Mentor | [Blogr]</title>
 </head>
 <body>
+
+  <!-- header start -->
   <header class="header">
-<!-- 
-      <img src="images/bg-pattern-intro-mobile.svg" class="pattern" alt="">       -->
-  
     <div class="container">
         <nav class="nav__bar">
           <div class="logo">
@@ -26,17 +25,17 @@
              </button>
           </div>
           <ul class="list">
-            <li class="list__item"><a href="" class="list__link">Product  <img src="images/icon-arrow-dark.svg" alt=""></a></li>
-            <li class="list__item"><a href="" class="list__link">Company <img src="images/icon-arrow-dark.svg" alt=""></a></li>
-            <li class="list__item"><a href="" class="list__link">Contact <img src="images/icon-arrow-dark.svg" alt=""></a>
+            <li class="list__item"><a href="" class="list__link">Product  <img  id="arrow" src="images/icon-arrow-light.svg" alt=""></a></li>
+            <li class="list__item"><a href="" class="list__link">Company <img  id="arrow"src="images/icon-arrow-light.svg" alt=""></a></li>
+            <li class="list__item sub__link"><a href="" class="list__link ">Connect <img id="arrow" src="images/icon-arrow-light.svg" alt=""></a>
               <ul class="sub__list">
                 <li class="list__item sub"><a href="" class="">Contact</a></li>
                 <li class="list__item sub"><a href="" class="">NewsLetter</a></li>
-                <li class="list__item sub"><a href="" class="">SignUp</a></li>
+                <li class="list__item sub"><a href="" class="">Linkedin</a></li>
               </ul>
             </li>
             <div class="bar"></div>
-            <li class="list__item"><a href="" class="list__link">Login</a></li>
+            <li class="list__item"><a href="" class="list__link">Login<img  id="arrow"src="images/icon-arrow-light.svg" alt="" style="opacity: 0;"></a></li>
             <li class="list__item"><a href="" class="list__link sign__up showcase__btn">Sign Up</a></li>
           </ul>
         </nav>
@@ -52,6 +51,131 @@
         </div>
     </div>
   </header>
+  <!-- header end -->
+
+  <!-- first section start -->
+  <section class="first__section">
+     <div class="container">
+         <h2 class="title">Designed for the future</h2>
+         <div class="row">
+           <div class="col">
+              <h3 class="para__title">Introducing an extensible editor</h3>
+              <p class="para">
+                Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+                The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
+                videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
+                change the looks of a blog.
+              
+              </p>
+
+              <h3 class="para__title">Robust content management</h3>
+              <p class="para">
+                Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+                by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+              </p>
+           </div>
+           <div class="col">
+             <img src="images/illustration-editor-desktop.svg" alt="" class="section__img">
+           </div>
+         </div>
+     </div>
+  </section>
+  <!-- first section end -->
+
+  <!-- Second section  start-->
+  <section class="second__section" style="background-image: url('images/bg-pattern-circles.svg');">
+      <div class="container">
+          <div class="row " >
+            <div class="col">
+              <img src="images/illustration-phones.svg" alt="">
+            </div>
+            <div class="col">
+              <h3 class="para__title">
+                State of the Art Infrastructure
+              </h3>
+              <p class="para">
+                With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+                This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+              </p>
+            </div>
+          </div>
+      </div>
+  </section>
+  <!-- second section end -->
+
+  <!-- third section start -->
+  <section class="third__section">
+    <div class="container">
+       <div class="row">
+         <div class="col one">
+           <!-- <img src="images/illustration-laptop-mobile.svg" alt=""> -->
+         </div>
+         <div class="col">
+             <h3 class="para__title">Free, open, simple</h3>
+
+             <p class="para">  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
+              features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
+              and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
+
+             <h3 class="para__title">Powerful tooling</h3>
+
+             <p class="para">  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+             capable of producing even the most complicated sites.</p>
+         </div>
+       </div>
+    </div>
+  </section>
+  <!-- third section end -->
+
+  <!-- footer start -->
+  <footer>
+    <div class="container">
+      <div class="grid">
+        <div class="grid item">
+          <img src="images/logo.svg" class="logo__img">
+        </div>
+        <div class="grid item">
+          <h4 class="footer__title">
+            Product
+          </h4>
+          <ul>
+            <li>Overview</li>
+            <li>Pricing</li>
+            <li>Marketplace</li>
+            <li>Features</li>
+            <li>Integrations</li>
+          </ul>
+        </div>
+
+        <div class="grid item">
+
+          <h4 class="footer__title">
+            Company
+          </h4>
+          <ul>
+            <li>About</li>
+            <li>Team</li>
+            <li>Blog</li>
+            <li>Careers</li>
+          </ul>
+
+        </div>
+
+        <div class="grid item">
+          <h4 class="footer__title">
+            Connect
+          </h4>
+          <ul>
+            <li>Contact</li>
+            <li>Newsletter</li>
+            <li>LinkedIn</li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </footer>
+  <!-- footer end -->
   <script src="js/app.js"></script>
 </body>
 </html>
