--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -87,7 +87,7 @@
       <div class="container">
           <div class="row " >
             <div class="col">
-              <img src="images/illustration-phones.svg" alt="">
+              <img src="images/illustration-phones.svg" class="phones" alt="">
             </div>
             <div class="col">
               <h3 class="para__title">
@@ -131,10 +131,10 @@
   <footer>
     <div class="container">
       <div class="grid">
-        <div class="grid item">
+        <div class="grid__item">
           <img src="images/logo.svg" class="logo__img">
         </div>
-        <div class="grid item">
+        <div class="grid__item">
           <h4 class="footer__title">
             Product
           </h4>
@@ -147,7 +147,7 @@
           </ul>
         </div>
 
-        <div class="grid item">
+        <div class="grid__item">
 
           <h4 class="footer__title">
             Company
@@ -161,7 +161,7 @@
 
         </div>
 
-        <div class="grid item">
+        <div class="grid__item">
           <h4 class="footer__title">
             Connect
           </h4>
