--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -25,9 +25,9 @@
              </button>
           </div>
           <ul class="list">
-            <li class="list__item"><a href="" class="list__link">Product  <img  id="arrow" src="images/icon-arrow-light.svg" alt=""></a></li>
-            <li class="list__item"><a href="" class="list__link">Company <img  id="arrow"src="images/icon-arrow-light.svg" alt=""></a></li>
-            <li class="list__item sub__link"><a href="" class="list__link ">Connect <img id="arrow" src="images/icon-arrow-light.svg" alt=""></a>
+            <li class="list__item"><a href="" class="list__link">Product  <img  class="arrow" src="images/icon-arrow-light.svg" alt=""></a></li>
+            <li class="list__item"><a href="" class="list__link">Company <img  class="arrow"src="images/icon-arrow-light.svg" alt=""></a></li>
+            <li class="list__item sub__link"><a href="" class="list__link ">Connect <img class="arrow" src="images/icon-arrow-light.svg" alt=""></a>
               <ul class="sub__list">
                 <li class="list__item sub"><a href="" class="">Contact</a></li>
                 <li class="list__item sub"><a href="" class="">NewsLetter</a></li>
@@ -35,8 +35,8 @@
               </ul>
             </li>
             <div class="bar"></div>
-            <li class="list__item"><a href="" class="list__link">Login<img  id="arrow"src="images/icon-arrow-light.svg" alt="" style="opacity: 0;"></a></li>
-            <li class="list__item"><a href="" class="list__link sign__up showcase__btn">Sign Up</a></li>
+            <li class="list__item"><a href="#" class="list__link">Login<img  class="arrow"src="images/icon-arrow-light.svg" alt="arrow" style="opacity: 0;"></a></li>
+            <li class="list__item"><a href="#" class="list__link sign__up showcase__btn">Sign Up</a></li>
           </ul>
         </nav>
         <div class="showcase">
