--- a/time-tracking-dashboard-main/index.html
+++ b/time-tracking-dashboard-main/index.html
@@ -20,9 +20,9 @@
           </div>
         </div>
         <div class="item__body">
-           <p>Daily</p>
-           <p>Weekly</p>
-           <p>Monthly</p>
+           <p><a href="">Daily</a> </p>
+           <p><a href=""class="active">Weekly</a></p>
+           <p><a href="">Monthly</a></p>
         </div>
      </div>
 
