--- a/time-tracking-dashboard-main/index.html
+++ b/time-tracking-dashboard-main/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>Frontend Mentor | Time tracking dashboard</title>
 </head>
 <body>
   <div class="container">
-     <div class="item">
+     <div class="item  user__profile">
         <div class="item__header">
           <img src="images/image-jeremy.png" alt="" class="profile__img">
           <div class="user__info">
@@ -27,7 +26,7 @@
      </div>
 
      <div class="item activity">
-        <div class="item__wallpaper">
+        <div class="item__wallpaper work">
 
         </div>
         <div class="item__body">
@@ -36,13 +35,110 @@
               <img src="images/icon-ellipsis.svg" alt="three dots">
           </div>
 
-          <div class="row">
-            <h3>32Hrs</h3>
-            <p>Last week 36 -hrs</p> 
-        </div>
+          <div class="row time">
+            <h3>32hrs</h3>
+            <p>Last week 36-hrs</p> 
+          </div>
 
         </div>
      </div>
+
+     
+     <div class="item activity">
+      <div class="item__wallpaper play">
+
+      </div>
+      <div class="item__body">
+        <div class="row">
+            <h3>Play</h3>
+            <img src="images/icon-ellipsis.svg" alt="three dots">
+        </div>
+
+        <div class="row time">
+          <h3>10hrs</h3>
+          <p>Last week 8-hrs</p> 
+      </div>
+
+      </div>
+   </div>
+
+   
+   <div class="item activity">
+    <div class="item__wallpaper study">
+
+    </div>
+    <div class="item__body">
+      <div class="row">
+          <h3>Study</h3>
+          <img src="images/icon-ellipsis.svg" alt="three dots">
+      </div>
+
+      <div class="row time">
+        <h3>4hrs</h3>
+        <p>Last week - 7hrs</p> 
+    </div>
+
+    </div>
+ </div>
+
+ 
+ <div class="item activity">
+  <div class="item__wallpaper exercise">
+
+  </div>
+  <div class="item__body">
+    <div class="row">
+        <h3>Exercise</h3>
+        <img src="images/icon-ellipsis.svg" alt="three dots">
+    </div>
+
+    <div class="row time">
+      <h3>4hrs</h3>
+      <p>Last week 5-hrs</p> 
+  </div>
+
+  </div>
+</div>
+
+
+<div class="item activity">
+  <div class="item__wallpaper social">
+
+  </div>
+  <div class="item__body">
+    <div class="row">
+        <h3>Social</h3>
+        <img src="images/icon-ellipsis.svg" alt="three dots">
+    </div>
+
+    <div class="row time">
+      <h3>5hrs</h3>
+      <p>Last week 10-hrs</p> 
+  </div>
+
+  </div>
+</div>
+
+
+<div class="item activity">
+  <div class="item__wallpaper selfcare">
+
+  </div>
+  <div class="item__body">
+    <div class="row">
+        <h3>Self Care</h3>
+        <img src="images/icon-ellipsis.svg" alt="three dots">
+    </div>
+
+    <div class="row time">
+      <h3>2hrs</h3>
+      <p>Last week 2-hrs</p> 
+  </div>
+
+  </div>
+</div>
+
+
   </div>
 </body>
 </html>
