--- a/time-tracking-dashboard-main/index.html
+++ b/time-tracking-dashboard-main/index.html
@@ -140,6 +140,7 @@
       </div>    
     </div>
   </section>
+  <script src="js/library.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
