--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -14,24 +14,24 @@
 
   <!-- header start -->
   <header class="header">
-    <div class="container">
-        <nav class="nav__bar">
+    <div class="container" role="container">
+        <nav class="nav__bar" role="navigation">
           <div class="logo">
                <img src="images/logo.svg" class="logo__img">
           </div>
           <div class="hamburger__menu">
              <button class="toggle__btn">
-              <img src="images/icon-hamburger.svg" class="image__icon">
+              <img src="images/icon-hamburger.svg" alt="hamburger img" class="image__icon">
              </button>
           </div>
           <ul class="list">
-            <li class="list__item"><a href="" class="list__link">Product  <img  class="arrow" src="images/icon-arrow-light.svg" alt=""></a></li>
-            <li class="list__item"><a href="" class="list__link">Company <img  class="arrow"src="images/icon-arrow-light.svg" alt=""></a></li>
-            <li class="list__item sub__link"><a href="" class="list__link ">Connect <img class="arrow" src="images/icon-arrow-light.svg" alt=""></a>
+            <li class="list__item"><a href="" class="list__link">Product  <img alt="arrow" class="arrow" src="images/icon-arrow-light.svg" alt="arrow"></a></li>
+            <li class="list__item"><a href="" class="list__link">Company <img alt="arrow" class="arrow" src="images/icon-arrow-light.svg" alt="arrow"></a></li>
+            <li class="list__item sub__link"><a href="#" class="list__link ">Connect <img alt="arrow"class="arrow" src="images/icon-arrow-light.svg" alt="#"></a>
               <ul class="sub__list">
-                <li class="list__item sub"><a href="" class="">Contact</a></li>
-                <li class="list__item sub"><a href="" class="">NewsLetter</a></li>
-                <li class="list__item sub"><a href="" class="">Linkedin</a></li>
+                <li class="list__item sub"><a href="#" class="">Contact</a></li>
+                <li class="list__item sub"><a href="#" class="">NewsLetter</a></li>
+                <li class="list__item sub"><a href="#" class="">Linkedin</a></li>
               </ul>
             </li>
             <div class="bar"></div>
@@ -54,7 +54,7 @@
   <!-- header end -->
 
   <!-- first section start -->
-  <section class="first__section">
+  <section class="first__section" role="section">
      <div class="container">
          <h2 class="title">Designed for the future</h2>
          <div class="row">
@@ -75,7 +75,7 @@
               </p>
            </div>
            <div class="col">
-             <img src="images/illustration-editor-desktop.svg" alt="" class="section__img">
+             <img src="images/illustration-editor-desktop.svg" alt="Desktop img" class="section__img">
            </div>
          </div>
      </div>
@@ -83,11 +83,11 @@
   <!-- first section end -->
 
   <!-- Second section  start-->
-  <section class="second__section" style="background-image: url('images/bg-pattern-circles.svg');">
+  <section class="second__section" role="section" style="background-image: url('images/bg-pattern-circles.svg');">
       <div class="container">
           <div class="row " >
             <div class="col">
-              <img src="images/illustration-phones.svg" class="phones" alt="">
+              <img src="images/illustration-phones.svg" class="phones" alt="Phone img">
             </div>
             <div class="col">
               <h3 class="para__title">
@@ -104,11 +104,10 @@
   <!-- second section end -->
 
   <!-- third section start -->
-  <section class="third__section">
+  <section class="third__section" role="section">
     <div class="container">
        <div class="row">
          <div class="col one">
-           <!-- <img src="images/illustration-laptop-mobile.svg" alt=""> -->
          </div>
          <div class="col">
              <h3 class="para__title">Free, open, simple</h3>
@@ -128,11 +127,11 @@
   <!-- third section end -->
 
   <!-- footer start -->
-  <footer>
+  <footer role="footer">
     <div class="container">
       <div class="grid">
         <div class="grid__item">
-          <img src="images/logo.svg" class="logo__img">
+          <img src="images/logo.svg" alt="logo" class="logo__img">
         </div>
         <div class="grid__item">
           <h4 class="footer__title">
