--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -14,7 +14,7 @@
 
   <!-- header start -->
   <header class="header">
-    <div class="container" role="container">
+    <div class="container">
         <nav class="nav__bar" role="navigation">
           <div class="logo">
                <img src="images/logo.svg" class="logo__img">
@@ -54,7 +54,7 @@
   <!-- header end -->
 
   <!-- first section start -->
-  <section class="first__section" role="section">
+  <section class="first__section" >
      <div class="container">
          <h2 class="title">Designed for the future</h2>
          <div class="row">
@@ -83,7 +83,7 @@
   <!-- first section end -->
 
   <!-- Second section  start-->
-  <section class="second__section" role="section" style="background-image: url('images/bg-pattern-circles.svg');">
+  <section class="second__section" style="background-image: url('images/bg-pattern-circles.svg');">
       <div class="container">
           <div class="row " >
             <div class="col">
@@ -104,7 +104,7 @@
   <!-- second section end -->
 
   <!-- third section start -->
-  <section class="third__section" role="section">
+  <section class="third__section" >
     <div class="container">
        <div class="row">
          <div class="col one">
@@ -127,7 +127,7 @@
   <!-- third section end -->
 
   <!-- footer start -->
-  <footer role="footer">
+  <footer>
     <div class="container">
       <div class="grid">
         <div class="grid__item">
