--- a/time-tracking-dashboard-main/index.html
+++ b/time-tracking-dashboard-main/index.html
@@ -8,7 +8,7 @@
   <title>Frontend Mentor | Time tracking dashboard</title>
 </head>
 <body>
-  <section>
+  <section role="main">
         <div class="container">
           <div class="item  user__profile">
             <div class="item__header">
