--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <nav class="nav__bar" role="navigation">
           <div class="logo">
-               <img src="images/logo.svg" class="logo__img">
+               <img src="images/logo.svg" alt="logo" class="logo__img">
           </div>
           <div class="hamburger__menu">
              <button class="toggle__btn">
@@ -25,9 +25,9 @@
              </button>
           </div>
           <ul class="list">
-            <li class="list__item"><a href="" class="list__link">Product  <img alt="arrow" class="arrow" src="images/icon-arrow-light.svg" alt="arrow"></a></li>
-            <li class="list__item"><a href="" class="list__link">Company <img alt="arrow" class="arrow" src="images/icon-arrow-light.svg" alt="arrow"></a></li>
-            <li class="list__item sub__link"><a href="#" class="list__link ">Connect <img alt="arrow"class="arrow" src="images/icon-arrow-light.svg" alt="#"></a>
+            <li class="list__item"><a href="#" class="list__link">Product  <img alt="arrow" class="arrow" src="images/icon-arrow-light.svg" ></a></li>
+            <li class="list__item"><a href="#" class="list__link">Company <img alt="arrow" class="arrow" src="images/icon-arrow-light.svg"></a></li>
+            <li class="list__item sub__link"><a href="#" class="list__link ">Connect <img alt="arrow"class="arrow" src="images/icon-arrow-light.svg"></a>
               <ul class="sub__list">
                 <li class="list__item sub"><a href="#" class="">Contact</a></li>
                 <li class="list__item sub"><a href="#" class="">NewsLetter</a></li>
@@ -45,8 +45,8 @@
           </h1>
           <h4 class="showcase__subtitle"> Grow your audience and build your online brand</h4>
           <div class="showcase__btn__container">
-              <a href="" class="showcase__btn">Start for Free</a>
-              <a href="" class="showcase__btn light">Learn More</a>
+              <a href="#" class="showcase__btn">Start for Free</a>
+              <a href="#" class="showcase__btn light">Learn More</a>
           </div>
         </div>
     </div>
