--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <!-- header start -->
-  <header class="header">
+  <header class="header" role="h">
     <div class="container">
         <nav class="nav__bar" role="navigation">
           <div class="logo">
@@ -34,7 +34,7 @@
                 <li class="list__item sub"><a href="#" class="">Linkedin</a></li>
               </ul>
             </li>
-            <div class="bar"></div>
+            <li class="bar"></li>
             <li class="list__item"><a href="#" class="list__link">Login<img  class="arrow"src="images/icon-arrow-light.svg" alt="arrow" style="opacity: 0;"></a></li>
             <li class="list__item"><a href="#" class="list__link sign__up showcase__btn">Sign Up</a></li>
           </ul>
@@ -54,7 +54,7 @@
   <!-- header end -->
 
   <!-- first section start -->
-  <section class="first__section" >
+  <section class="first__section" role="main" >
      <div class="container">
          <h2 class="title">Designed for the future</h2>
          <div class="row">
@@ -83,7 +83,7 @@
   <!-- first section end -->
 
   <!-- Second section  start-->
-  <section class="second__section" style="background-image: url('images/bg-pattern-circles.svg');">
+  <section class="second__section" role="banner" style="background-image: url('images/bg-pattern-circles.svg');">
       <div class="container">
           <div class="row " >
             <div class="col">
@@ -104,7 +104,7 @@
   <!-- second section end -->
 
   <!-- third section start -->
-  <section class="third__section" >
+  <section class="third__section" role="banner" >
     <div class="container">
        <div class="row">
          <div class="col one">
