--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <!-- header start -->
-  <header class="header" role="h">
+  <header class="header">
     <div class="container">
         <nav class="nav__bar" role="navigation">
           <div class="logo">
