--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -15,7 +15,7 @@
   <!-- header start -->
   <header class="header">
     <div class="container">
-        <nav class="nav__bar" role="navigation">
+        <nav class="nav__bar">
           <div class="logo">
                <img src="images/logo.svg" alt="logo" class="logo__img">
           </div>
