--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -83,7 +83,7 @@
   <!-- first section end -->
 
   <!-- Second section  start-->
-  <section class="second__section" role="banner" style="background-image: url('images/bg-pattern-circles.svg');">
+  <section class="second__section"  style="background-image: url('images/bg-pattern-circles.svg');">
       <div class="container">
           <div class="row " >
             <div class="col">
@@ -104,7 +104,7 @@
   <!-- second section end -->
 
   <!-- third section start -->
-  <section class="third__section" role="banner" >
+  <section class="third__section"  >
     <div class="container">
        <div class="row">
          <div class="col one">
