--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -54,7 +54,7 @@
   <!-- header end -->
 
   <!-- first section start -->
-  <section class="first__section" role="main" >
+  <section class="first__section" role="banner" >
      <div class="container">
          <h2 class="title">Designed for the future</h2>
          <div class="row">
