--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -10,15 +10,32 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>Frontend Mentor | NFT preview card component</title>
 </head>
-<body>
+<body>  
+  <main>
+    <div class="card">
+       <a href="#" class="card__link"><img src="images/image-equilibrium.jpg" alt="Cube Image" class="card__top"></a> 
+        <div class="card__body">
+             <h1 class="card__title">Equilibrium #3429</h1>
+              <p class="card__detail">Our Equilibrium collection promotes balance and calm.</p>
 
-  Equilibrium #3429
+              <div class="details__row">
+                 <p>
+                   <img src="images/icon-ethereum.svg" alt="Image of Ethereum icon" >
+                     0.041 ETH
+                 </p>
+                 <p>
+                  <img src="images/icon-clock.svg" alt="Icon of Clock"> 3 days left
+                 </p>
+              </div>
 
-  Our Equilibrium collection promotes balance and calm.
+              <div class="line"></div>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+              <div class="author">
+                  <img src="images/image-avatar.png" alt="Creator image">
+                  <p><span>  Creation of</span> <a href="#">Jules Wyvern</a></p>
+              </div>
+        </div>
+    </div>
+  </main>
 </body>
 </html>
