--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -2,49 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Single Price Grid Component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  Join our communityddddc
+    <main>
+        <div class="grid container">
 
-  30-day, hassle-free money back guarantee
+            <div class="grid__item one">
+                <h1 class="title__text">Join our community</h1>
+                <h2 class="subtitle__text">30-day, hassle-free money back guarantee</h2>
+                <p class="paragraph__text">
+                  Gain access to our full library of tutorials along with expert code reviews. 
+                  Perfect for any developers who are serious about honing their skills.
+                </p>
+            </div>
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
+            <div class="grid__item two">
+                <h2 class="subtitle__text">Monthly Subscription</h2>
+                <div>
+                  <p><span>&dollar;29</span></p>
+                  <p class="paragraph__text">per month</p>
+                </div>
+                
+                <p class="paragraph__text">Full access for less than &dollar;1 a day</p>
+                <a href="#" class="btn btn__signup">Sign Up</a>
+            </div>
 
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+            <div class="grid__item three">
+              <h2 class="subtitle__text">Why Us</h2>
+              <ul class="list">
+                <li class="list__item">Tutorials by industry experts</li>
+                <li class="list__item">Peer &amp; expert code review</li>
+                <li class="list__item">Coding exercises</li>
+                <li class="list__item">Access to our GitHub repos</li>
+                <li class="list__item">Community forum</li>
+                <li class="list__item">Flashcard decks</li>
+              </ul>
+            </div>
+            
+        </div>
+    </main>
 </body>
 </html>
