--- a/intro-section-with-dropdown-navigation-main/index.html
+++ b/intro-section-with-dropdown-navigation-main/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
+
 </head>
 <body>
 
@@ -24,16 +29,15 @@
   Learn more -->
 
   <header>
+     <div class="logo__toggler">
+        <img src="images/logo.svg" alt="Logo Image">
+        <button class="toggler__Btn">
+          <img src="images/icon-menu.svg"  alt="Toggler Option">
+        </button>
+    </div>
     <nav class="nav__bar">
-       <div class="logo">
-         <img src="images/logo.svg" alt="Logo Image">
-       </div>
-       <div class="toggler">
-         <button>
-           <img src="images/icon-menu.svg" alt="Toggler Option">
-         </button>
          <ul class="list">
-           <li><a href="#">Features</a>
+           <li><a href="#">Features <img src="images/icon-arrow-down.svg" class="dropdown__arrow" alt="Arrow" ></a>
              <ul class="sub__list">
                <li><a href="#"> <img src="images/icon-todo.svg" alt=""> Todo List</a></li>
                <li><a href="#"> <img src="images/icon-calendar.svg" alt=""> Calender</a></li>
@@ -42,11 +46,19 @@
                <li><a href="#"> <img src="images/icon-planning.svg" alt=""> Planing</a></li>
              </ul>
           </li>
-           <li><a href="#">Company</a></li>
+           <li><a href="#">Company <img src="images/icon-arrow-down.svg" class="dropdown__arrow" alt="Arrow" ></a>
+               <ul class="sub__list">
+                  <li><a href="#">History</a></li>
+                  <li><a href="#">Our Team</a></li>
+                  <li><a href="#">Blog</a></li>
+               </ul>
+            </li>
+
            <li><a href="#">Careers</a></li>
+
            <li><a href="#">About</a></li>
          </ul>
-       </div>
+     
     </nav>
   </header>
   
