--- a/intro-section-with-dropdown-navigation-main/index.html
+++ b/intro-section-with-dropdown-navigation-main/index.html
@@ -4,31 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Frontend Mentor challenge ">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <title>Frontend Mentor | Intro section with dropdown navigation</title>
+  <title>Frontend Mentor | Intro Section with Dropdown Navigation</title>
 
 </head>
 
 <body>
-
-  <!-- Features
-  Company
-  Careers
-  About
-
-  Login
-  Register
-
-  Make remote work
-
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
-
-  Learn more -->
 
   <header>
     <div class="logo__toggler">
@@ -39,19 +25,19 @@
     </div>
     <nav class="nav__bar">
       <ul class="list">
-        <li><a href="#" id="dropDown">Features <img src="images/icon-arrow-down.svg" class="dropdown__arrow"
-              alt="Arrow"></a>
+        <li class="dropwonLink"><a href="#" id="dropDown">Features <img src="images/icon-arrow-down.svg"
+              class="dropdown__arrow" alt="Arrow"></a>
           <ul class="sub__list">
             <li><a href="#"> <img src="images/icon-todo.svg" alt="Todo"> Todo List</a></li>
             <li><a href="#"> <img src="images/icon-calendar.svg" alt="Calender"> Calender</a></li>
             <li><a href="#">
-                <img src="images/icon-reminders.svg" alt=""> Reminders</a></li>
+                <img src="images/icon-reminders.svg" alt="Reminders"> Reminders</a></li>
             <li><a href="#"> <img src="images/icon-planning.svg" alt="Planning"> Planing</a></li>
           </ul>
         </li>
-        <li><a href="#" id="dropDown">Company <img src="images/icon-arrow-down.svg" class="dropdown__arrow"
-              alt="Arrow"></a>
-          <ul class="sub__list">
+        <li class="dropwonLink"><a href="#" id="dropDown">Company <img src="images/icon-arrow-down.svg"
+              class="dropdown__arrow" alt="Arrow"></a>
+          <ul class="sub__list" id="two">
             <li><a href="#">History</a></li>
             <li><a href="#">Our Team</a></li>
             <li><a href="#">Blog</a></li>
@@ -61,7 +47,12 @@
         <li><a href="#">Careers</a></li>
 
         <li><a href="#">About</a></li>
+
+        <li class="inLarge first"><a href="#">Login</a></li>
+        <li class="inLarge "><a href="#">Sign Up</a></li>
       </ul>
+
+
 
     </nav>
   </header>
@@ -69,12 +60,12 @@
     <div class="container">
       <div class="col">
         <h1 class="title">
-          Make remote work</h1>
+          Make <span>remote work</span></h1>
         <p>
           Get your team in sync, no matter your location. Streamline processes,
           create team rituals, and watch productivity soar.
         </p>
-        <a href="#" class="btn"> Learn more</a>
+        <a href="#" title="Sample Button" class="btn"> Learn more</a>
         <div class="img__container">
           <img src="images/client-databiz.svg" alt="Data Biz Img">
           <img src="images/client-audiophile.svg" alt="Audiophile Img">
