--- a/intro-section-with-dropdown-navigation-main/index.html
+++ b/intro-section-with-dropdown-navigation-main/index.html
@@ -25,7 +25,7 @@
     </div>
     <nav class="nav__bar">
       <ul class="list">
-        <li class="dropwonLink"><a href="#" id="dropDown">Features <img src="images/icon-arrow-down.svg"
+        <li class="dropwonLink"><a href="#" class="dropDown">Features <img src="images/icon-arrow-down.svg"
               class="dropdown__arrow" alt="Arrow"></a>
           <ul class="sub__list">
             <li><a href="#"> <img src="images/icon-todo.svg" alt="Todo"> Todo List</a></li>
@@ -35,7 +35,7 @@
             <li><a href="#"> <img src="images/icon-planning.svg" alt="Planning"> Planing</a></li>
           </ul>
         </li>
-        <li class="dropwonLink"><a href="#" id="dropDown">Company <img src="images/icon-arrow-down.svg"
+        <li class="dropwonLink"><a href="#"  class="dropDown">Company <img src="images/icon-arrow-down.svg"
               class="dropdown__arrow" alt="Arrow"></a>
           <ul class="sub__list" id="two">
             <li><a href="#">History</a></li>
