--- a/intro-section-with-dropdown-navigation-main/index.html
+++ b/intro-section-with-dropdown-navigation-main/index.html
@@ -49,7 +49,7 @@
         <li><a href="#">About</a></li>
 
         <li class="inLarge first"><a href="#">Login</a></li>
-        <li class="inLarge "><a href="#">Sign Up</a></li>
+        <li class="inLarge "><a href="#" class="active">Register</a></li>
       </ul>
 
 
