--- a/social-proof-section-master/index.html
+++ b/social-proof-section-master/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap" rel="stylesheet">
@@ -50,8 +51,7 @@
                       <img src="images/icon-star.svg" alt="Star">
                       <img src="images/icon-star.svg" alt="Star">
                      </div>
-                    <h3>Rated 5 Stars in BestTech</h3>
-                   
+                    <h3>Rated 5 Stars in BestTech</h3>                  
                    </div>
               </div>
          </div>
