--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -71,14 +71,14 @@
 
         <div class="calculator__bottom">
            <div>
-              <h3>Ti amount <br> <span>
+              <h3>Tip amount <br> <span>
                 / Person
               </span> </h3>
               <p>$0.00</p>
            </div>
            
            <div>
-            <h3>Ti amount <br> <span>
+            <h3>Tip amount <br> <span>
               / Person
             </span> </h3>
             <p>$0.00</p>
