--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -34,12 +34,12 @@
           <div>
             <h2>Select Tip <small>%</small></h2>
             <div class="tips">
-              <button type="button" data-id="1" disabled class="tip">5%</button>
-              <button type="button" data-id="2" disabled class="tip">10%</button>
-              <button type="button" data-id="3" disabled class="tip">15%</button>
-              <button type="button" data-id="4" disabled class="tip">25%</button>
-              <button type="button" data-id="5" disabled class="tip">50%</button>
-              <input type="number"  data-id="6" disabled id="custom" class="tip" placeholder="Custom">
+              <button type="button" data-value="5" disabled class="tip">5%</button>
+              <button type="button" data-value="10" disabled class="tip">10%</button>
+              <button type="button" data-value="15" disabled class="tip">15%</button>
+              <button type="button" data-value="25" disabled class="tip">25%</button>
+              <button type="button" data-value="50" disabled class="tip">50%</button>
+              <input type="number"  data-value="40" disabled id="custom" class="tip" placeholder="Custom">
             </div> 
           </div> 
 
