--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -28,7 +28,7 @@
         <div class="calculator__top">
           <div>
             <label id="bill__label" for="bill">Bill</label>
-            <input type="number" id="bill" required aria-placeholder="">
+            <input type="number" min="1" id="bill" required aria-placeholder="">
           </div>
 
           <div>
@@ -39,13 +39,13 @@
               <button type="button" data-value="15" disabled class="tip">15%</button>
               <button type="button" data-value="25" disabled class="tip">25%</button>
               <button type="button" data-value="50" disabled class="tip">50%</button>
-              <input type="number"  data-value="40" disabled id="custom" class="tip" placeholder="Custom">
+              <input type="number"  data-value="0" disabled id="custom" class="tip" placeholder="Custom">
             </div> 
           </div> 
 
           <div>
-             <label for="people" id="people__label">Number of People</label>
-             <input type="number" id="people"  >
+             <label for="people" id="people__label"> <span>Number of People</span> <span class="error">Can't be 0</span> </label>
+             <input type="number" min="1" disabled id="people"  >
           </div>
 
         </div>
@@ -55,16 +55,16 @@
               <h3>Tip amount <br> <span>
                 / Person
               </span> </h3>
-              <p>$0.00</p>
+              <p id="tipAmt">$0.00</p>
            </div>
            
            <div>
             <h3>Total <br> <span>
               / Person
             </span> </h3>
-            <p>$0.00</p>
+            <p id="totalTip">$0.00</p>
            </div>
-           <button class="btn-reset">Rest</button>
+           <button id="reset-btn" class="btn-reset">Reset</button>
 
         </div>
        
