--- a/manage-landing-page-master/index.html
+++ b/manage-landing-page-master/index.html
@@ -7,6 +7,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Manage landing page</title>
+  <link rel="stylesheet" href="css/slick-theme.css">
+  <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/output.css">
   <link rel="stylesheet" href="css/style.css">
 
@@ -96,7 +98,7 @@
             <img src="images/logo.svg" alt="Logo">
          </div>
          <nav class="relative ml-auto">
-           <ul class="flex gap-x-6">
+           <ul class="flex gap-x-6 items-center">
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="#">About Us</a></li>
@@ -116,7 +118,7 @@
         <h1 class="text-DarkBlue-clr text-6xl font-bold mb-8 leading-tight">
           Bring everyone together to build better products.
         </h1>
-        <p class="text-lg  my-10 ">
+        <p class="text-base  my-10 ">
           Manage makes it simple for software teams to plan day-to-day 
           tasks while keeping the larger team goals in view.
         </p>
@@ -125,10 +127,131 @@
         </a>
       </div>
       <div class="sec-1-b w-full pt-10">
-        <img src="images/illustration-intro.svg" alt="illustration-intro">
+        <img src="images/illustration-intro.svg" class="w-full" alt="illustration-intro">
       </div>
     </div>
   </section>
   <!-- Section 1 end -->
+
+  <!-- secion 2 -->
+  <section class="section-2  mt-10 pt-10">
+    <div class="container mx-auto flex gap-x-10">
+      <div class="sec-2-a pt-10 w-full">
+        <h2 class="text-DarkBlue-clr text-4xl pr-10 font-bold mb-8 leading-tight">What’s different about Manage?</h2>
+        <p class="text-base  ">
+          Manage provides all the functionality your team needs, without 
+          the complexity. Our software is tailor-made for modern digital 
+          product teams. 
+        </p>
+      </div>
+      <div class="sec-1-b w-full pt-10">
+        <div class="flex gap-x-10 mb-10">
+          <h4 class="">01</h4>
+          <div class="w-5/6">
+             <h3 class="text-DarkBlue-clr text-base mt-3  font-bold mb-7 ">
+              Track company-wide progress
+             </h3>
+             <p class="text-base font-light leading-7 ">
+              See how your day-to-day tasks fit into the wider vision. Go from 
+              tracking progress at the milestone level all the way done to the 
+              smallest of details. Never lose sight of the bigger picture again.
+             </p>
+          </div>
+        </div>
+        <div class="flex mb-10 gap-x-10">
+          <h4>02</h4>
+          <div class="w-5/6" >
+             <h3 class="text-DarkBlue-clr text-base mt-3  font-bold mb-7 ">
+              Advanced built-in reports
+             </h3>
+             <p class="text-base font-light leading-7 ">
+              Set internal delivery estimates and track progress toward company 
+              goals. Our customisable dashboard helps you build out the reports 
+              you need to keep key stakeholders informed.
+             </p>
+          </div>
+        </div>
+        <div class="flex gap-x-10">
+          <h4 >03</h4>
+          <div class="w-5/6">
+             <h3 class="text-DarkBlue-clr text-lg mt-3  font-bold mb-7 ">
+              Everything you need in one place
+             </h3>
+             <p class="text-base font-light leading-7 ">
+              Everything you need in one place
+              Stop jumping from one service to another to communicate, store files, 
+              track tasks and share documents. Manage offers an all-in-one team 
+              productivity solution.
+             </p>
+          </div>
+        </div>
+      </div>
+     </div>   
+  </section>
+
+  <!-- section 3 -->
+  <section class="section-3 mt-10 pt-10">
+    <div class="max-w-full mx-auto p-0">
+      <h2 class="text-center text-DarkBlue-clr text-4xl font-bold mb-10">What they said ? </h2>
+      <div class="slider overflow-hidden mt-10">
+        <div class="slide flex flex-col items-center">
+          <img src="images/avatar-ali.png" alt="Person">
+          <div class="inner-slide">
+            <h3 class="mb-5 text-DarkBlue-clr font-bold">Ali Bravo</h3>
+            <p class="leading-7">“We have been able to cancel so many other subscriptions since using 
+              Manage. There is no more cross-channel confusion and everyone is much 
+              more focused.”
+            </p>
+          </div>
+        </div>
+        <div class="slide flex flex-col items-center">
+          <img src="images/avatar-anisha.png" alt="Person">
+          <div class="inner-slide">
+            <h3 class="mb-5 text-DarkBlue-clr font-bold"> Anisha Li</h3>
+            <p class="leading-7">  
+              “Manage has supercharged our team’s workflow. The ability to maintain 
+              visibility on larger milestones at all times keeps everyone motivated.”
+            </p>
+          </div>
+        </div>
+        <div class="slide flex flex-col items-center">
+          <img src="images/avatar-richard.png" alt="Person">
+          <div class="inner-slide">
+            <h3 class="mb-5 text-DarkBlue-clr font-bold"> Richard Watts</h3>
+            <p class="leading-7">
+             
+              “Manage allows us to provide structure and process. It keeps us organized 
+              and focused. I can’t stop recommending them to everyone I talk to!”</p>
+          </div>
+        </div>
+        <div class="slide">
+          <img src="images/avatar-shanai.png" alt="Person">
+          <div class="inner-slide">
+            <h3 class="mb-5 text-DarkBlue-clr font-bold">Shanai Gough</h3>
+            <p class="leading-7">
+              “Their software allows us to track, manage and collaborate on our projects 
+              from anywhere. It keeps the whole team in-sync without being intrusive.”</p>
+          </div>
+          </div>
+      </div>
+      <div class="flex">
+        <a href="#" class='custom-button mx-auto'>
+          Get Started
+        </a>
+      </div>
+    </div>
+  </section>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/slick.js"></script>
+  <script>
+    
+$('.slider').slick({
+  slidesToShow: 3,
+  slidesToScroll: 1,
+  autoplay: true,
+  autoplaySpeed: 3000,
+  dots:false
+});
+  </script>
 </body>
 </html>
