--- a/manage-landing-page-master/index.html
+++ b/manage-landing-page-master/index.html
@@ -190,8 +190,8 @@
   </section>
 
   <!-- section 3 -->
-  <section class="section-3 mt-10 pt-10">
-    <div class="max-w-full mx-auto p-0">
+  <section class="section-3 mt-10 mb-10 pt-10">
+    <div class="max-w-full mx-auto pt-10">
       <h2 class="text-center text-DarkBlue-clr text-4xl font-bold mb-10">What they said ? </h2>
       <div class="slider overflow-hidden mt-10">
         <div class="slide flex flex-col items-center">
@@ -241,6 +241,15 @@
       </div>
     </div>
   </section>
+
+  <section class="section-4  mt-10 mb-3">
+    <div class="container mx-auto flex gap-x-10 justify-between items-center">
+      <h2 class="text-4xl text-white font-bold">Simplify How you team <br> works today</h2>
+      <a href="#" class='custom-button bg-white'>
+        Get Started
+      </a>
+    </div>
+  </section>
   <script src="js/jquery.min.js"></script>
   <script src="js/slick.js"></script>
   <script>
@@ -249,7 +258,7 @@ $('.slider').slick({
   slidesToShow: 3,
   slidesToScroll: 1,
   autoplay: true,
-  autoplaySpeed: 3000,
+  autoplaySpeed: 4000,
   dots:false
 });
   </script>
