--- a/manage-landing-page-master/index.html
+++ b/manage-landing-page-master/index.html
@@ -302,7 +302,7 @@
             </div>
             <p class="text-white copy-right text-right">Copyright 2020. All Rights Reserved</p>
         </div>
-        <p class="hidden cr-mobile text-white copy-right">Copyright 2020. All Rights Reserved</p>
+        <h4 class="hidden cr-mobile text-white copy-right">Copyright 2020. All Rights Reserved</h4>
     </div>
   </footer>
   
