--- a/manage-landing-page-master/index.html
+++ b/manage-landing-page-master/index.html
@@ -92,7 +92,7 @@
   Go
   Copyright 2020. All Rights Reserved -->
 
-  <header class="pt-8 relative">
+  <header role="banner" class="pt-8 relative">
      <div class="container mx-auto pt-8">
        <div class="flex items-center ">
          <div class="img-container pt-1">
@@ -116,7 +116,8 @@
      </div>
   </header>
 
-  <!-- Section 1 start -->
+  <main role="main">
+    <!-- Section 1 start -->
   <section class="section-1 mt-10 pt-10">
     <div class="container mx-auto flex gap-x-10">
       <div class="sec-1-a pt-10 w-full">
@@ -255,8 +256,9 @@
       </a>
     </div>
   </section>
+  </main>
 
-  <footer class="pt-10 pb-10">
+  <footer class="pt-10 pb-10" role="contentinfo">
     <div class="footer-container container mt-10 flex mx-auto">
         <div class="footer-col one w-full">
            <img src="images/logo-white.svg" alt="Logo">
