--- a/manage-landing-page-master/index.html
+++ b/manage-landing-page-master/index.html
@@ -92,7 +92,7 @@
   Go
   Copyright 2020. All Rights Reserved -->
 
-  <header role="banner" class="pt-8 relative">
+  <header  class="pt-8 relative">
      <div class="container mx-auto pt-8">
        <div class="flex items-center ">
          <div class="img-container pt-1">
@@ -116,7 +116,7 @@
      </div>
   </header>
 
-  <main role="main">
+  <main>
     <!-- Section 1 start -->
   <section class="section-1 mt-10 pt-10">
     <div class="container mx-auto flex gap-x-10">
@@ -258,7 +258,7 @@
   </section>
   </main>
 
-  <footer class="pt-10 pb-10" role="contentinfo">
+  <footer class="pt-10 pb-10">
     <div class="footer-container container mt-10 flex mx-auto">
         <div class="footer-col one w-full">
            <img src="images/logo-white.svg" alt="Logo">
