--- a/manage-landing-page-master/index.html
+++ b/manage-landing-page-master/index.html
@@ -196,7 +196,7 @@
   </section>
 
   <!-- section 3 -->
-  <section class="section-3 mt-10 mb-10 pt-10">
+  <section class="section-3 mt-10 mb-10">
     <div class="max-w-full mx-auto pt-10">
       <h2 class="text-center text-DarkBlue-clr text-4xl font-bold mb-10">What they said ? </h2>
       <div class="slider overflow-hidden mt-10">
